# activity-rule-editor

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml
backend/api/: main.py
backend/services/: excel_parser.py
docs/: CANVAS_EDIT_FEATURE.md  DEPLOYMENT.md  EDIT_FEATURE.md  IMAGE_LOADING_OPTIMIZATION.md  TABLE_HEIGHT_CALCULATION_FIX.md  TABLE_ROWSPAN_FIX.md  TROUBLESHOOTING.md
scripts/: activity-rule-editor.ini
web/: .gitignore  eslint.config.mjs  package.json  vite.config.ts
web/src/: main.tsx
web/src/components/: EditSidebar.tsx  ImageUploadModal.tsx  TableEditModal.tsx  TextEditModal.tsx
web/src/pages/: preview.tsx
web/src/renderer/canvas/: PageCanvas.tsx  ParagraphComponent.tsx  TableComponent.tsx  TableComponentShape.tsx  index.tsx  types.ts  useImageCache.ts
web/src/styles/: globals.css
web/src/utils/: file.ts
